force-app/main/default/objects/SplitScreenParenChildSetting__mdt/SplitScreenParenChildSetting__mdt.object-meta.xml
<CustomObject>
    <label>SplitScreenParenChildSetting</label>
    <pluralLabel>SplitScreenParenChildSettings</pluralLabel>
</CustomObject>