force-app/main/default/objects/SplitScreenParenChildSetting__mdt/fields/Child_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Child_Record_Types__c</fullName>
    <inlineHelpText>Please enter comma separated values</inlineHelpText>
    <label>Child Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>