force-app/main/default/objects/SplitScreenParenChildSetting__mdt/fields/Child_sObject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_sObject_Api_Name__c</fullName>
    <label>Child sObject Api Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>