force-app/main/default/objects/SplitScreenParenChildSetting__mdt/fields/Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type__c</fullName>
    <label>Parent Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>