force-app/main/default/objects/SplitScreenParenChildSetting__mdt/fields/Parent_sObject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_sObject_Api_Name__c</fullName>
    <label>Parent sObject Api Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>